<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondo"
    android:layout_height="match_parent"
    tools:context=".TodosDiagnosticosActivity">

    <Button
        android:id="@+id/botonEcografia"
        android:layout_width="300dp"
        android:layout_height="76dp"
        android:background="@color/lila"
        android:onClick="onClickHome"
        android:text="@string/ecografia"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <Button
        android:id="@+id/botonHisteroscopia"
        android:layout_width="300dp"
        android:layout_height="76dp"
        android:background="@color/lilam"
        android:onClick="onClickHome"
        android:text="@string/histeroscopia"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <Button
        android:id="@+id/botonAnalisisSangre"
        android:layout_width="300dp"
        android:layout_height="76dp"
        android:background="@color/azul"
        android:onClick="onClickHome"
        android:text="@string/analisis_sangre"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753" />

    <Button
        android:id="@+id/botonBiopsia"
        android:layout_width="300dp"
        android:layout_height="76dp"
        android:background="@color/naranja"
        android:onClick="onClickHome"
        android:text="@string/biopsia"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <Button
        android:id="@+id/botonExamenPelvico"
        android:layout_width="300dp"
        android:layout_height="76dp"
        android:background="@color/rosa"
        android:onClick="onClickHome"
        android:text="@string/ex_pelvico"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <Button
        android:id="@+id/botonPapanicolau"
        android:layout_width="300dp"
        android:layout_height="76dp"
        android:background="@color/azuloscuro"
        android:onClick="onClickHome"
        android:text="@string/papanicolaou"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914" />


</androidx.constraintlayout.widget.ConstraintLayout>