<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Medico.SobreHuaMedicoActivity">

    <Button
        android:id="@+id/botonQueEsHUAMed"
        android:layout_width="145dp"
        android:layout_height="122dp"
        android:background="@color/lila"
        android:onClick="onClickHome"
        android:text="@string/que_es_la_hua"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:icon="@drawable/interrogacion"
        app:iconGravity="top"
        app:iconSize="@dimen/btnSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <Button
        android:id="@+id/botonContactarMedicoMed"
        android:layout_width="145dp"
        android:layout_height="122dp"
        android:background="@color/lima"
        android:onClick="onClickHome"
        android:text="@string/contactar"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:icon="@drawable/contactar"
        app:iconGravity="top"
        app:iconSize="@dimen/btnSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <Button
        android:id="@+id/botonMeCuidoMed"
        android:layout_width="145dp"
        android:layout_height="122dp"
        android:background="@color/naranja"
        android:onClick="onClickHome"
        android:text="@string/cuido"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:icon="@drawable/cuido"
        app:iconGravity="top"
        app:iconSize="@dimen/btnSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <Button
        android:id="@+id/botonTtoMed"
        android:layout_width="145dp"
        android:layout_height="122dp"
        android:background="@color/verde"
        android:onClick="onClickHome"
        android:text="@string/tto"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:icon="@drawable/diu"
        app:iconGravity="top"
        app:iconSize="@dimen/btnSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <Button
        android:id="@+id/botonSignosysintomasMed"
        android:layout_width="145dp"
        android:layout_height="122dp"
        android:background="@color/azuloscuro"
        android:onClick="onClickHome"
        android:text="@string/signos_sintomas"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:icon="@drawable/signosysintomas"
        app:iconGravity="top"
        app:iconSize="@dimen/btnSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <Button
        android:id="@+id/botonDiagnosticaMed"
        android:layout_width="145dp"
        android:layout_height="122dp"
        android:background="@color/rosa"
        android:onClick="onClickHome"
        android:text="@string/diagnostica"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:icon="@drawable/diagnostico"
        app:iconGravity="top"
        app:iconSize="@dimen/btnSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655" />

    <Button
        android:id="@+id/botonCausaHUAMed"
        android:layout_width="145dp"
        android:layout_height="122dp"
        android:background="@color/lilam"
        android:onClick="onClickHome"
        android:text="@string/causa_HUA"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:icon="@drawable/causa"
        app:iconGravity="top"
        app:iconSize="@dimen/btnSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />

    <Button
        android:id="@+id/botonPeligrosoMed"
        android:layout_width="145dp"
        android:layout_height="122dp"
        android:background="@color/azul"
        android:onClick="onClickHome"
        android:text="@string/peligroso"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:icon="@drawable/peligroso"
        app:iconGravity="top"
        app:iconSize="@dimen/btnSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <include layout="@menu/toolbarmedico"/>
</androidx.constraintlayout.widget.ConstraintLayout>