<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Paciente.HomePacienteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="132dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnCita"
            android:layout_width="148dp"
            android:layout_height="132dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_botton_2"
            android:onClick="onClickHome"
            android:text="@string/pedir_cita"
            android:textColor="#000000"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_cita"
            app:iconGravity="top"
            app:iconSize="@dimen/btnSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/botonHistorialCitas"
            android:layout_width="148dp"
            android:layout_height="132dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_botton_2"
            android:onClick="onClickHome"
            android:text="@string/historial_citas"
            android:textColor="#000000"
            app:backgroundTint="@null"
            app:icon="@drawable/historial_cita"
            app:iconGravity="top"
            app:iconSize="@dimen/btnSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/botonSobreHUA"
            android:layout_width="148dp"
            android:layout_height="132dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/custom_botton_2"
            android:onClick="onClickHome"
            android:text="@string/sobre_HUA"
            android:textColor="#000000"
            app:backgroundTint="@null"
            app:icon="@drawable/sobrehua"
            app:iconGravity="top"
            app:iconSize="@dimen/btnSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnPersonalInfo"
            android:layout_width="148dp"
            android:layout_height="132dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_botton_2"
            android:onClick="onClickHome"
            android:text="@string/informacion_personal"
            android:textColor="#000000"
            app:backgroundTint="@null"
            app:icon="@drawable/informacion_personal"
            app:iconGravity="top"
            app:iconSize="@dimen/btnSize" />
    </LinearLayout>


    <include layout="@menu/toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>